	- Fix support to Clamav Google Safe Browsing that need a second
	  query to clamd because the url need to be embeded in an email
	  like content. Thanks to frOgz for the report.
	- Documentation updated for safebrowsing and proxy configuration
	  variables.
	- All redirect CGI scripts have been rewritten with some CSS and
	  to better handle virus vs malware. Thanks to frOgz for the patches.

2012-07-26 version 6.8

	- Compatibility fix with new c-icap 0.2.1 release that prevent
	  squidclamav service to be initialized. Thanks to Martin Matuska
	  for the patch.
	- Fix issue with new c-icap 0.2.1 release that generate an error
	  error each time squidclamav return CI_MOD_204 in end of data
	  handler function. Thanks to Martin Matuska or the patch.

2012-07-24 version 6.7

	- Add a workaround for a squidGuard bug that unescape the URL and
	  send it back unescaped. This result in garbage staying into pipe
	  of the system command call and could crash squidclamav on next
	  read or return false information. This is specially true with URL
	  containing the %0D or %0A character. Thanks to John Xue for the
	  report.
	- Update documentation about the recommanded way to call squidGuard
	  through the use of url_rewrite_program in squid.conf. You may not
	  use the squidguard configuration directive into squidclamav.conf.

2012-05-28 version 6.6

	- Rewrite entirely the squidclamav behavior with the maxsize directive.
	  The previous fix was only a workaround.
	- Fix a bug on 'trustclient' check part that was never executed if
	  dnslookup was disabled. Thanks to Tinu for the report.

2012-01-15 version 6.5

	- Fix a squidclamav crash when maxsize is removed from configuration
	  file or disabled/set to 0. Thanks to Pascal Bendeich for the report.
	- Fix an issue when downloaded file size is upper than clamd.conf limit
	  set into the StreamMaxLength configuration directive. Thanks to Arnvid
	  Karstad for the report.