@@ -146,7 +146,7 @@
 #define PACKAGE_NAME "SquidClamav"
 
 /* Define to the full name and version of this package. */
-#define PACKAGE_STRING "SquidClamav 6.8"
+#define PACKAGE_STRING "SquidClamav 6.9"
 
 /* Define to the one symbol short name of this package. */
 #define PACKAGE_TARNAME "squidclamav"
@@ -155,13 +155,13 @@
 #define PACKAGE_URL ""
 
 /* Define to the version of this package. */
-#define PACKAGE_VERSION "6.8"
+#define PACKAGE_VERSION "6.9"
 
 /* Define to 1 if you have the ANSI C header files. */
 #define STDC_HEADERS 1
 
 /* Version number of package */
-#define VERSION "6.8"
+#define VERSION "6.9"
 
 /* Define to rpl_malloc if the replacement function should be used. */
 /* #undef malloc */
